<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerValue"
            android:textSize="16sp"
            android:textColor="@color/lightGray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.537"/>
    <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            android:progressTint="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:id="@+id/questionNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionNumber"
            android:textSize="14sp"
            android:textColor="@color/lightGray"
            app:layout_constraintBottom_toTopOf="@+id/questionTextView"
            app:layout_constraintStart_toStartOf="@+id/questionTextView"
            android:layout_marginBottom="5dp"/>
    <TextView
            android:id="@+id/questionTextView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.482"/>
    <RadioGroup
            android:id="@+id/optionsGroup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/questionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.489">

        <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:layout_marginBottom="12dp"
        />

        <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:layout_marginBottom="12dp"
        />

        <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:layout_marginBottom="12dp"
        />

        <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_4"/>
    </RadioGroup>
    <Button
            android:id="@+id/nextButton"
            android:layout_width="330dp"
            android:layout_height="52dp"
            android:text="@string/nextButton"
            app:layout_constraintTop_toBottomOf="@id/optionsGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/clock" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/timerTextView"
            app:layout_constraintEnd_toStartOf="@+id/timerTextView" android:layout_marginTop="3dp"
            android:layout_marginEnd="6dp" android:contentDescription="@string/clock"/>

</androidx.constraintlayout.widget.ConstraintLayout>
